add stock api
